--- a/src/app/pages/course/detail-course/detail-course.component.html
+++ b/src/app/pages/course/detail-course/detail-course.component.html
@@ -14,7 +14,7 @@
 
     <div class="info-row">
       <div class="info-cell label">Fournisseur</div>
-      <div class="info-cell value">{{ shop?.displayLabel }}</div>
+      <div class="info-cell value">{{ shop.displayLabel }}</div>
     </div>
 
     <div class="info-row">
@@ -24,7 +24,7 @@
 
     <div class="info-row">
       <div class="info-cell label">Devise</div>
-      <div class="info-cell value">{{ data.currency?.name }}</div>
+      <div class="info-cell value">{{ data.currency.name }}</div>
     </div>
   </div>
 
