--- a/src/app/pages/plat/detaildishes/detaildishes.component.html
+++ b/src/app/pages/plat/detaildishes/detaildishes.component.html
@@ -14,7 +14,7 @@
 
     <div class="info-row">
       <div class="info-cell label">Catégorie</div>
-      <div class="info-cell value">{{ plat?.categoryMenu?.name }} ({{ plat?.categoryMenu?.code }})</div>
+      <div class="info-cell value">{{ plat.categoryMenu.name }} ({{ plat.categoryMenu.code }})</div>
     </div>
 
     <div class="info-row">
