--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -58,7 +58,7 @@
           <td mat-cell *matCellDef="let shop" class="f-s-14">
 
             <span *ngIf="shop.isActive" class="text-success rounded f-w-600 p-6 p-y-4 f-s-12">
-              Actif
+              Actif / Inactif
             </span>
 
             <span *ngIf="!shop.isActive" class="text-error rounded f-w-600 p-6 p-y-4 f-s-12">
@@ -115,7 +115,7 @@
         <div class="col-lg-4 d-flex align-items-center">
           <mat-checkbox id="is_active" color="primary" [(ngModel)]="shopData.isActive"
             (change)="shopData.isActive = $event.checked" [checked]="true">
-            Activé
+            Actif / Inactif
           </mat-checkbox>
         </div>
       </div>
