--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -57,12 +57,12 @@
           </th>
           <td mat-cell *matCellDef="let shop" class="f-s-14">
 
-            <span *ngIf="shop.isActive" class="text-success rounded f-w-600 p-6 p-y-4 f-s-12">
-              Actif / Inactif
+            <span *ngIf="shop.isActive" class="text-success rounded f-w-600  f-s-12">
+              Actif
             </span>
 
-            <span *ngIf="!shop.isActive" class="text-error rounded f-w-600 p-6 p-y-4 f-s-12">
-              Desactif
+            <span *ngIf="!shop.isActive" class="text-error rounded f-w-600  f-s-12">
+              Inactif
             </span>
 
           </td>
