Afficher la devise devant le prix

--- a/src/app/pages/product/modalproduct/modalproduct.component.html
+++ b/src/app/pages/product/modalproduct/modalproduct.component.html
@@ -19,7 +19,7 @@
     <!-- Ligne Prix -->
     <div class="info-row">
       <div class="info-cell label">Prix</div>
-      <div class="info-cell value">{{ data.price }}</div>
+      <div class="info-cell value">{{ data.price }} {{ product.user.compteUser.address.country.currency.symbol }}</div>
     </div>
 
     <!-- Ligne Marque -->
