--- a/src/app/pages/plat/modaldishes/modaldishes.component.html
+++ b/src/app/pages/plat/modaldishes/modaldishes.component.html
@@ -136,7 +136,7 @@
         </div>
   
   
-        <button pButton label="Modifier le plat" type="submit" [loading]="loadingSave" class="p-button-vert mt-3" [disabled]="!f.valid" ></button>
+        <button style="background-color: #222222;" pButton label="Modifier le plat" type="submit" [loading]="loadingSave" class="p-button-vert mt-3" [disabled]="!f.valid" ></button>
       </form>
   
   </div>
