--- a/src/app/pages/plat/newdishes/newdishes.component.scss
+++ b/src/app/pages/plat/newdishes/newdishes.component.scss
@@ -1,7 +1,7 @@
 // Définition des couleurs en nuances de gris
-$noir: #000000;
+$noir: #00000085;
 $blanc: #ffffff;
-$grisFonce: #222222;
+$grisFonce: #22222269;
 $grisMoyen: #555555;
 $grisClair: #aaaaaa;
 $newgray: #595959;
