--- a/src/app/pages/recipe/detailrecipe/detailrecipe.component.html
+++ b/src/app/pages/recipe/detailrecipe/detailrecipe.component.html
@@ -38,21 +38,21 @@
 
   <h3 class="dialog-title">Liste des Détails de la Recette</h3>
   <div class="info-table">
-    <div class="info-header">
+    <div style="text-align: center;" class="info-header">
       <div class="info-header-cell">Produit</div>
       <div class="info-header-cell">Proportion %</div>
       <div class="info-header-cell">Préparation Ingrédient</div>
     </div>
 
-    <div *ngFor="let detail of detailRecipe2" class="info-row">
+    <div style="text-align: center;" *ngFor="let detail of detailRecipe2" class="info-row">
       <div class="info-cell">{{ detail?.ingredient?.name }}</div>
-      <div class="info-cell">{{ detail?.proportion }}</div>
+      <div class="info-cell">{{ detail?.proportion }} %</div>
       <div class="info-cell">{{ detail?.preparationIngredient }}</div>
     </div>
 
     <div class="info-row">
       <div class="info-cell label">Total Proportion</div>
-      <div class="info-cell value">{{ totalProportion | number: '1.0-3' }}</div>
+      <div class="info-cell value">{{ totalProportion | number: '1.0-3' }} %</div>
     </div>
   </div>
 
