--- a/src/app/pages/recipe/modalrecipe/modalrecipe.component.html
+++ b/src/app/pages/recipe/modalrecipe/modalrecipe.component.html
@@ -6,7 +6,7 @@
         <div class="col-12 card p-fluid">
           <!--<h5>Ajouter un nouveau plat</h5>-->
   
-          <div class="grid p-1  entete bg-primary m-auto">
+          <div style="background-color: #555555;" class="grid p-1  entete m-auto">
   
             <!--<div class="field col-2">
               <label htmlFor="code">Nom du plat</label>
@@ -332,7 +332,7 @@
   
       <p class="divider mt-4" ></p>
       <!--<p class="divider"></p>-->
-      <div class="grid p-2 entete bg-primary">
+      <div style="background-color: #555555;" class="grid p-2 entete">
   
         <div class="field  col-12">
   
