--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -219,7 +219,7 @@
         </div>
         <div class="col-lg-4 d-flex align-items-center">
           <mat-checkbox id="isActive" color="primary" [(ngModel)]="shopData.isActive" [checked]="shopData.isActive">
-            Activé
+            Actif / Inactif
           </mat-checkbox>
         </div>
       </div>
